Bug #3 fixed. Fixed some alignment issues

--- a/styles/folded-code-preview.less
+++ b/styles/folded-code-preview.less
@@ -26,8 +26,6 @@ atom-text-editor .fold-marker {
 	position: absolute;
 	display: flex;
 	left: 0;
-	font-family: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
-	font-size: 0.75rem;
 	border: solid 1px;
 	border-left: none;
 	border-right: none;
